ci: 指定默认的java_options